# bad-editor

./: Cargo.toml  LICENSE  README.md  build.rs
default_config/: completions  editorconfig  linters.janet  template.sublime-syntax
defaults/: linter.janet
src/: app.rs  bad.rs  cli.rs  clipboard.rs  completer.rs  cursor.rs  editing.rs  exec.rs  highlighter.rs  lib.rs  linter.rs  main.rs  pane.rs  pane_settings.rs  prompt.rs  prompt_completer.rs  render.rs  rope_ext.rs  ropebuffer.rs  run.rs
syntaxes/: README.md  bash.sublime-syntax  c#.sublime-syntax  c++.sublime-syntax  c.sublime-syntax  css.sublime-syntax  haskell.sublime-syntax  html.sublime-syntax  janet.sublime-syntax  js.sublime-syntax  json.sublime-syntax  julia.sublime-syntax  lisp.sublime-syntax  lua.sublime-syntax  markdown.sublime-syntax  ocaml.sublime-syntax  perl.sublime-syntax  python.sublime-syntax  regexp.sublime-syntax  ruby.sublime-syntax  rust.sublime-syntax  sql.sublime-syntax  toml.sublime-syntax  typst.sublime-syntax  xml.sublime-syntax  yaml.sublime-syntax
