[package]
name = "bad-editor"
version = "0.1.0"
license = "MIT"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.29.0", features = ["osc52"] }
nu-ansi-term = "0.50.1"
reedline = "0.41.0"
ropey = { version = "1.6.1", features = ["unicode_lines"] }
syntect = "5.2.0"
unicode-segmentation = "1.12.0"
unicode_names2 = "2.0.0"

[dev-dependencies]
rstest = "0.26.1"

[build-dependencies]
syntect = "5.2.0"
