[package]
name = "bad-editor"
version = "0.1.0"
license = "MIT"
edition = "2024"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = { version = "3.6.1", default-features = false }
clap = "4.5.42"
crossterm = { version = "0.29.0" }
directories = "6.0.0"
ec4rs = "1.2.0"
janetrs = { version = "0.8.0", features = ["amalgation"] }
libc = "0.2.175"
nu-ansi-term = "0.50.1"
reedline = "0.41.0"
ropey = { version = "1.6.1", features = ["unicode_lines"] }
shlex = "1.3.0"
syntect = "5.2.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.1"
unicode_names2 = "2.0.0"

[dev-dependencies]
rstest = "0.26.1"

[build-dependencies]
syntect = "5.2.0"

[profile.dev.build-override]
# Enabling optimizations for build.rs seems to improve compile times
# significantly (24s -> 15s for clean debug build on my machine).
# I think it's because syntect without optimizations is really slow
# to build the syntax set.
opt-level = 3

[profile.dev]
# App::load_runtime_syntaxes would take like 15 seconds with opt-level=0!
# opt-level=1 doesn't seem to affect compile times much but it fixes the
# extremely slow loading of runtime syntaxes.
opt-level = 1

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "debuginfo"
